--- a/index.html
+++ b/index.html
@@ -9,24 +9,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="style.css" rel="stylesheet">
-    <title>Document</title>
+    <script>
+        {}
+    </script>
+    <title>Tic-Tac-Toe</title>
 </head>
 
 <body>
     <div class="container">
+        <h2 class="turn-label hide"><span id="turn"></span>'s turn</h2>
         <div class="grid-wrapper">
             <div class="grid">
-                <div class="grid-box">X</div>
-                <div class="grid-box">X</div>
-                <div class="grid-box">O</div>
-                <div class="grid-box">X</div>
-                <div class="grid-box">O</div>
-                <div class="grid-box">X</div>
-                <div class="grid-box">X</div>
-                <div class="grid-box">O</div>
-                <div class="grid-box">O</div>
+                <div class="grid-box" data-idx="0"></div>
+                <div class="grid-box" data-idx="1"></div>
+                <div class="grid-box" data-idx="2"></div>
+                <div class="grid-box" data-idx="3"></div>
+                <div class="grid-box" data-idx="4"></div>
+                <div class="grid-box" data-idx="5"></div>
+                <div class="grid-box" data-idx="6"></div>
+                <div class="grid-box" data-idx="7"></div>
+                <div class="grid-box" data-idx="8"></div>
             </div>
         </div>
+        <footer>
+            <small>
+                <span>&copy; 2022 zeka-mashi </span>
+                <a class="github" href="https://github.com/zeka-mashi/tic-tac-toe"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z" />
+                </svg></a>
+                <a class="website" href="https://davidthe.dev"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M16.36,14C16.44,13.34 16.5,12.68 16.5,12C16.5,11.32 16.44,10.66 16.36,10H19.74C19.9,10.64 20,11.31 20,12C20,12.69 19.9,13.36 19.74,14M14.59,19.56C15.19,18.45 15.65,17.25 15.97,16H18.92C17.96,17.65 16.43,18.93 14.59,19.56M14.34,14H9.66C9.56,13.34 9.5,12.68 9.5,12C9.5,11.32 9.56,10.65 9.66,10H14.34C14.43,10.65 14.5,11.32 14.5,12C14.5,12.68 14.43,13.34 14.34,14M12,19.96C11.17,18.76 10.5,17.43 10.09,16H13.91C13.5,17.43 12.83,18.76 12,19.96M8,8H5.08C6.03,6.34 7.57,5.06 9.4,4.44C8.8,5.55 8.35,6.75 8,8M5.08,16H8C8.35,17.25 8.8,18.45 9.4,19.56C7.57,18.93 6.03,17.65 5.08,16M4.26,14C4.1,13.36 4,12.69 4,12C4,11.31 4.1,10.64 4.26,10H7.64C7.56,10.66 7.5,11.32 7.5,12C7.5,12.68 7.56,13.34 7.64,14M12,4.03C12.83,5.23 13.5,6.57 13.91,8H10.09C10.5,6.57 11.17,5.23 12,4.03M18.92,8H15.97C15.65,6.75 15.19,5.55 14.59,4.44C16.43,5.07 17.96,6.34 18.92,8M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+                </svg></a>
+            </small>
+        </footer>
     </div>
     <div class="modal">
         <div class="modal-container">
@@ -36,22 +51,22 @@
                     <h1>Tic-Tac-Toe!</h1>
                 </div>
                 <div class="grouping">
-                    <label for="player.name">Your Name: </label>
-                    <input type="text" id="player.name" minlength="3" maxlength="20" required title="Enter your name!">
+                    <label for="player.name">Your Name:</label>
+                    <input type="text" id="player.name" name="player.name" minlength="3" maxlength="20" required title="Enter your name!">
                 </div>
                 <div class="grouping">
                     <label>Choose your mark:</label>
                     <div>
-                        <input type="radio" id="player.mark.x" name="player.mark" checked>
+                        <input type="radio" id="player.mark.x" name="player.mark" value="X" checked>
                         <label for="player.mark.x">X</label>
                     </div>
                     <div>
-                        <input type="radio" id="player.mark.o" name="player.mark">
+                        <input type="radio" id="player.mark.o" name="player.mark" value="O">
                         <label for="player.mark.o">O</label>
                     </div>
                 </div>
             </form>
-            <div class="submit"><input type="submit" form="selectionForm" value="I'm Ready"></div>
+            <div class="submit"><input type="submit" form="selectionForm" id="submit" value="I'm Ready"></div>
         </div>
     </div>
 </body>
